@@ -1,5 +1,11 @@
 2005-02-16  Mark McLoughlin  <markmc@redhat.com>
 
+	* lib/config.py.in: add PROTOTYPE_USER.
+	
+	* admin-tool/profilesdialog.py: use it here.
+
+2005-02-16  Mark McLoughlin  <markmc@redhat.com>
+
 	* lib/config.py.in: add SKEL_HOMEDIR.
 	
 	* lib/usermod.py:
